--- a/vizidot-app/.gitignore
+++ b/vizidot-app/.gitignore
@@ -1,3 +1,16 @@
+.env
+.env.*
+**/build/
+.dart_tool/
+.packages
+.flutter-plugins
+.flutter-plugins-dependencies
+ios/Pods/
+android/.gradle/
+android/app/release/
+.vscode/
+.idea/
+**/*.iml
 # Miscellaneous
 *.class
 *.log
