--- a/vizidot-app/pubspec.yaml
+++ b/vizidot-app/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  get: ^4.6.6
+  google_fonts: ^6.2.1
+  flutter_svg: ^2.0.10+1
+  equatable: ^2.0.5
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +50,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.4.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -56,6 +63,30 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/icons/
+    - assets/splash/
+    - assets/tab-ic/
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: assets/icons/app_icon.png
+  adaptive_icon_background: "#111111"
+  adaptive_icon_foreground: assets/icons/app_icon_foreground.png
+  remove_alpha_ios: true
+
+flutter_native_splash:
+  color: "#111111"
+  color_dark: "#000000"
+  android_12:
+    color: "#111111"
+    color_dark: "#000000"
+    icon_background_color: "#111111"
+  image: assets/splash/splash.png
+  image_dark: assets/splash/splash_dark.png
+  android: true
+  ios: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
