--- a/vizidot-app/pubspec.yaml
+++ b/vizidot-app/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_svg: ^2.0.10+1
   equatable: ^2.0.5
   flutter_dotenv: ^5.1.0
+  cached_network_image: ^3.3.1
+  flutter_cache_manager: ^3.3.1
 
 dev_dependencies:
   flutter_test:
