--- a/vizidot-app/pubspec.yaml
+++ b/vizidot-app/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   cached_network_image: ^3.3.1
   flutter_cache_manager: ^3.3.1
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
