--- a/vizidot-app/ios/Runner/GoogleService-Info.plist
+++ b/vizidot-app/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>538542923941-8u3laqnen2sk3cspcora7imau1o1d7kt.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.538542923941-8u3laqnen2sk3cspcora7imau1o1d7kt</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBXjjXun3YKhAa-QikhgjivW6KBVETs26A</string>
 	<key>GCM_SENDER_ID</key>
