--- a/vizidot-app/pubspec.yaml
+++ b/vizidot-app/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   firebase_core: ^4.1.1
   firebase_auth: ^6.1.0
   google_sign_in: ^6.2.1
+  sign_in_with_apple: ^6.1.2
+  flutter_facebook_auth: ^7.1.0
 
 dev_dependencies:
   flutter_test:
