--- a/vizidot-app/pubspec.yaml
+++ b/vizidot-app/pubspec.yaml
@@ -85,10 +85,10 @@ flutter_launcher_icons:
   remove_alpha_ios: true
 
 flutter_native_splash:
-  color: "#111111"
+  color: "#EFF3F5"            # light mode
   color_dark: "#000000"
   android_12:
-    color: "#111111"
+    color: "#EFF3F5"          # Android 12+ light mode
     color_dark: "#000000"
     icon_background_color: "#111111"
   image: assets/splash/splash.png
