Categories Screen Added.

--- a/vizidot-app/pubspec.yaml
+++ b/vizidot-app/pubspec.yaml
@@ -75,6 +75,7 @@ flutter:
     - assets/icons/
     - assets/splash/
     - assets/tab-ic/
+    - assets/categories/
 
 flutter_launcher_icons:
   android: true
