Artists selection screen Added.

--- a/vizidot-app/pubspec.yaml
+++ b/vizidot-app/pubspec.yaml
@@ -76,6 +76,7 @@ flutter:
     - assets/splash/
     - assets/tab-ic/
     - assets/categories/
+    - assets/artists/
 
 flutter_launcher_icons:
   android: true
