--- a/admin-panel/public/manifest.json
+++ b/admin-panel/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "eBazar Admin",
-  "name": "eBazar Admin Panel",
+  "short_name": "Vizidot Admin",
+  "name": "Vizidot Admin Panel",
   "icons": [
     {
       "src": "favicon-16x16.png",
