--- a/backend/env.example
+++ b/backend/env.example
@@ -10,9 +10,9 @@ DB_USER=root
 DB_PASSWORD=
 
 # Firebase Configuration
-FIREBASE_PROJECT_ID=tea-boy-3b443
-FIREBASE_DATABASE_URL=https://tea-boy-3b443.firebaseio.com
-FIREBASE_SERVICE_ACCOUNT_PATH=./tea-boy-3b443-firebase-adminsdk-d3ewt-8cee515502.json
+FIREBASE_PROJECT_ID=vizidot-4b492
+FIREBASE_DATABASE_URL=https://vizidot-4b492.firebaseio.com
+FIREBASE_SERVICE_ACCOUNT_PATH=./vizidot-4b492-firebase-adminsdk-mmzox-c3a057f143.json
 
 # JWT Configuration
 JWT_SECRET=your_jwt_secret_key_here
