--- a/backend/env.example
+++ b/backend/env.example
@@ -3,11 +3,12 @@ PORT=3000
 NODE_ENV=development
 
 # Database Configuration
-DB_HOST=localhost
+DB_HOST=c1109547.sgvps.net
 DB_PORT=3306
-DB_NAME=ebazar
-DB_USER=root
-DB_PASSWORD=
+DB_NAME=dbvwnuu5gdchot
+DB_USER=u84b1oa3bdbvu
+DB_PASSWORD=oi_-DR!b1GCh2qsip4
+DB_SSL=false
 
 # Firebase Configuration
 FIREBASE_PROJECT_ID=vizidot-4b492
