--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "seed": "node scripts/runSeeder.js",
+    "sync": "node scripts/syncSchema.js",
+    "create-tables": "node scripts/createTablesDirect.js",
     "test": "jest"
   },
   "dependencies": {
