--- a/backend/env.example
+++ b/backend/env.example
@@ -7,12 +7,14 @@ DB_HOST=srv1149167.hstgr.cloud
 DB_PORT=3306
 DB_NAME=u5gdchot-vizidot
 DB_USER=api_vizidot_user
-DB_PASSWORD=RPtze2.HTPHvT*E$#%#3
+DB_PASSWORD="RPtze2.HTPHvT*E$#%#3"
 
 # Firebase Configuration
 FIREBASE_PROJECT_ID=vizidot-4b492
 FIREBASE_DATABASE_URL=https://vizidot-4b492.firebaseio.com
-FIREBASE_SERVICE_ACCOUNT_PATH=./vizidot-4b492-firebase-adminsdk-mmzox-c3a057f143.json
+# Provide the minified JSON blob (or base64-encoded JSON) for Firebase credentials.
+# This value is required in all environments.
+FIREBASE_SERVICE_ACCOUNT_JSON=""
 
 # JWT Configuration
 JWT_SECRET=your_jwt_secret_key_here
