--- a/vizidot-app/pubspec.yaml
+++ b/vizidot-app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_cache_manager: ^3.3.1
   shared_preferences: ^2.2.3
+  share_plus: ^10.1.2
   firebase_core: ^4.1.1
   firebase_auth: ^6.1.0
   google_sign_in: ^6.2.1
