--- a/vizidot-app/pubspec.yaml
+++ b/vizidot-app/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   flutter_cache_manager: ^3.3.1
   shared_preferences: ^2.2.3
   share_plus: ^10.1.2
+  package_info_plus: ^8.0.0
+  file_picker: ^8.0.0
+  flutter_staggered_grid_view: ^0.7.0
   firebase_core: ^4.1.1
   firebase_auth: ^6.1.0
   google_sign_in: ^6.2.1
