--- a/vizidot-app/pubspec.yaml
+++ b/vizidot-app/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   package_info_plus: ^8.0.0
   file_picker: ^8.0.0
   flutter_staggered_grid_view: ^0.7.0
+  just_audio: ^0.9.40
+  audio_service: ^0.18.12
+  permission_handler: ^11.3.1
   firebase_core: ^4.1.1
   firebase_auth: ^6.1.0
   google_sign_in: ^6.2.1
