--- a/vizidot-app/pubspec.yaml
+++ b/vizidot-app/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   just_audio: ^0.9.40
   audio_service: ^0.18.12
   permission_handler: ^11.3.1
+  agora_rtc_engine: ^6.5.3
+  cloud_firestore: ^6.0.2
   firebase_core: ^4.1.1
   firebase_auth: ^6.1.0
   google_sign_in: ^6.2.1
@@ -91,7 +93,7 @@ flutter_launcher_icons:
   ios: true
   image_path: assets/icons/app_icon.png
   adaptive_icon_background: "#111111"
-  adaptive_icon_foreground: assets/icons/app_icon_foreground.png
+  adaptive_icon_foreground: assets/icons/app_icon.png
   remove_alpha_ios: true
 
 flutter_native_splash:
