--- a/vizidot-app/pubspec.yaml
+++ b/vizidot-app/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   webview_flutter: ^4.9.0
   arkit_plugin: ^1.1.0
   encrypt: ^5.0.3
+  camera: ^0.11.0+2
+  image: ^4.2.0
   path: ^1.9.0
   fluttertoast: ^8.2.6
 
@@ -91,6 +93,7 @@ flutter:
     - assets/tab-ic/
     - assets/categories/
     - assets/artists/
+    - assets/scaning-images/
 
 flutter_launcher_icons:
   android: true
