--- a/vizidot-api/env.example
+++ b/vizidot-api/env.example
@@ -1,5 +1,5 @@
 # Server Configuration
-PORT=3000
+# Backend API runs on port 8000 (hardcoded in server.js). PORT here is for reference only.
 NODE_ENV=development
 
 # Database Configuration
@@ -13,7 +13,7 @@ DB_PASSWORD="RPtze2.HTPHvT*E$#%#3"
 FIREBASE_PROJECT_ID=vizidot-4b492
 FIREBASE_DATABASE_URL=https://vizidot-4b492.firebaseio.com
 # Provide the minified JSON blob (or base64-encoded JSON) for Firebase credentials.
-# This value is required in all environments.
+# Leave empty for local dev: server will start and /health will work; auth/Firestore routes will fail.
 FIREBASE_SERVICE_ACCOUNT_JSON=""
 
 # JWT Configuration
