Follow- Un Follow changes

--- a/app-api/env.example
+++ b/app-api/env.example
@@ -2,6 +2,10 @@
 # Backend API runs on port 8000 (hardcoded in server.js). PORT here is for reference only.
 NODE_ENV=development
 
+# Testing: non-expiring access token for API tests (dev only; ignored when NODE_ENV=production).
+# Use header: Authorization: Bearer test-token-no-expire (or your value if you set TEST_ACCESS_TOKEN).
+TEST_ACCESS_TOKEN=test-token-no-expire
+
 # Database Configuration
 DB_HOST=srv1149167.hstgr.cloud
 DB_PORT=3306
