--- a/app-api/package.json
+++ b/app-api/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
+    "dev": "NODE_ENV=development nodemon server.js",
     "seed": "node scripts/runSeeder.js",
     "sync": "node scripts/syncSchema.js",
     "create-tables": "node scripts/createTablesDirect.js",
