--- a/vizidot-app/pubspec.yaml
+++ b/vizidot-app/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   path: ^1.9.0
   http: ^1.2.0
   fluttertoast: ^8.2.6
+  flutter_chat_core: ^2.0.0
+  flutter_chat_ui: ^2.0.0
 
 dev_dependencies:
   flutter_test:
