--- a/vizidot-app/ios/Runner/Info.plist
+++ b/vizidot-app/ios/Runner/Info.plist
@@ -47,6 +47,8 @@
 		<string>Vizidot</string>
 		<key>LSApplicationQueriesSchemes</key>
 		<array>
+			<string>https</string>
+			<string>http</string>
 			<string>fbapi</string>
 			<string>fb-messenger-share-api</string>
 			<string>fbauth2</string>
