--- a/vizidot-app/pubspec.yaml
+++ b/vizidot-app/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   fluttertoast: ^8.2.6
   flutter_chat_core: ^2.0.0
   flutter_chat_ui: ^2.0.0
+  url_launcher: ^6.2.5
 
 dev_dependencies:
   flutter_test:
